send to all working

--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<input>
-<button>send to all</button>
-<button>send to me</button>
-<div class="target">messages</div>
+    <input id="input" type="text" autocomplete="off">
+    <button id="sendAllBtn">send to all</button>
+    <button id="sendMeBtn">send to me</button>
+    <div class="target">messages</div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="script.js"></script>
