--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,17 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <input id="input" type="text" autocomplete="off">
-    <button id="sendAllBtn">send to all</button>
-    <button id="sendMeBtn">send to me</button>
+<div class="container">
+    <h1>😻 KittyChat</h1>
     <div class="target">messages</div>
+    <div class="input-container">
+        <input id="input" type="text" autocomplete="off">
+        <div class="buttons">
+            <button id="sendAllBtn">send to all</button>
+            <button id="sendMeBtn">send to me</button>
+        </div>
+    </div>
+</div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="script.js"></script>
