added some more silly styling

--- a/client/index.html
+++ b/client/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h1>😻 KittyChat</h1>
-    <div class="target">messages</div>
-    <div class="input-container">
-        <input id="input" type="text" autocomplete="off">
-        <div class="buttons">
-            <button id="sendAllBtn">send to all</button>
-            <button id="sendMeBtn">send to me</button>
+<div class="main-container">
+    <div class="container">
+        <h1>😻 KittyChat</h1>
+        <div class="target">messages</div>
+        <div class="input-container">
+            <input id="input" type="text" autocomplete="off">
+            <div class="buttons">
+                <button id="sendAllBtn">send to all</button>
+                <button id="sendMeBtn">send to me</button>
+            </div>
         </div>
     </div>
 </div>
