displaying messages in list, prevent empty message, styling

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <div class="main-container">
-    <div class="container">
+    <div class="content-container">
         <h1>😻 KittyChat</h1>
-        <div class="target">messages</div>
+        <div class="target"></div>
         <div class="input-container">
             <input id="input" type="text" autocomplete="off">
             <div class="buttons">
