finally solved disconnect and connect both logging by removing scripts from index

--- a/client/chat.html
+++ b/client/chat.html
@@ -11,7 +11,12 @@
 <body>
 <div class="main-container">
     <form class="content-container">
-        <h1>😸 KittyChat</h1>
+        <header class="chat-header">
+            <h1>😸 KittyChat</h1>
+            <a href="index.html" class="leave-btn">
+                leave
+            </a>
+        </header>
         <div class="target"></div>
         <div class="input-container">
             <input id="input" type="text" autocomplete="off">
