Display welcome message in list, display user connected/disconnected, added emoji popup, added emoji animation, css update and cleanup

--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="index-container">
+<div class="join-main-container">
     <div class="content-container">
-        <header class="join-container">
-            <h1>😸 KittyChat</h1>
+        <header class="join-header">
+            <div class="logo">
+                <div class="emoji-anim cat-anim" role="img" aria-label="cat-anim"></div>
+                <h1>KittyChat</h1>
+            </div>
         </header>
         <form action="chat.html">
-            <div class="input-container-index">
+            <div class="join-container-form">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" placeholder="Enter username" required>
                 <label for="chatroom">Chatroom:</label>
