--- a/client/chat.html
+++ b/client/chat.html
@@ -12,15 +12,34 @@
 <div class="main-container">
     <form class="content-container">
         <header class="chat-header">
-            <h1>😸 KittyChat</h1>
+            <div class="logo-inline">
+                <div class="emoji-anim cat-anim" role="img" aria-label="cat-anim"></div>
+                <h1>KittyChat</h1>
+            </div>
             <a href="index.html" class="leave-btn">
-                leave
+                Leave
             </a>
         </header>
-        <div class="target"></div>
+        <div class="target">
+            <div id="emoji-popup-id" class="emoji-popup toggle-popup">
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">🙀</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😽</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😸</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😿</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😾</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😻</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😺</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😼</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">😹</div>
+                <div class="emoji" onclick="addEmoji(this.innerHTML)">🐱</div>
+            </div>
+        </div>
         <div class="input-container">
-            <input id="input" type="text" autocomplete="off">
-            <div class="buttons">
+            <div class="chat-input-container">
+                <textarea id="input" type="text" autocomplete="off"></textarea>
+                <button type="button" class="emo-btn" onclick="toggleEmojiPopup()">🐱</button>
+            </div>
+            <div class="buttons-container">
                 <button id="sendAllBtn">send to all</button>
                 <button id="sendMeBtn">send to me</button>
             </div>
