figuring out how to get input data from index page

--- a/client/chat.html
+++ b/client/chat.html
@@ -47,6 +47,19 @@
     </form>
 </div>
 
+<!--<div class="join-container-form">-->
+<!--    <label for="username">Username:</label>-->
+<!--    <input type="text" id="username" name="username" placeholder="Enter username" required>-->
+<!--    <label for="chatroom">Chatroom:</label>-->
+<!--    <select id="chatroom" name="chatroom">-->
+<!--        <option value="catnip">catnip</option>-->
+<!--        <option value="boxes">boxes</option>-->
+<!--        <option value="naps">naps</option>-->
+<!--        <option value="food">food</option>-->
+<!--    </select>-->
+<!--    <button id="login" class="enter-btn" type="submit">Enter Chat</button>-->
+<!--</div>-->
+
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="script.js"></script>
