--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
+    <meta name="viewport"c
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>chatroom</title>
@@ -15,6 +15,7 @@
             <div class="logo">
                 <div class="emoji-anim cat-anim" role="img" aria-label="cat-anim"></div>
                 <h1>KittyChat</h1>
+
             </div>
         </header>
         <form action="chat.html">
@@ -28,7 +29,7 @@
                     <option value="naps">naps</option>
                     <option value="food">food</option>
                 </select>
-                <button class="enter-btn" type="submit">Enter Chat</button>
+                <button id="login" class="enter-btn" type="submit">Enter Chat</button>
 
             </div>
         </form>
