changed output in target to one function, added user id output and styling

--- a/client/index.html
+++ b/client/index.html
@@ -24,10 +24,10 @@
                 <input type="text" id="username" name="username" placeholder="Enter username" required>
                 <label for="chatroom">Chatroom:</label>
                 <select id="chatroom" name="chatroom">
-                    <option value="catnip">catnip</option>
-                    <option value="boxes">boxes</option>
-                    <option value="naps">naps</option>
-                    <option value="food">food</option>
+                    <option value="catnip">Catnip Adventures</option>
+                    <option value="boxes">Best Boxes</option>
+                    <option value="naps">Recommended Nap Spots</option>
+                    <option value="foods">Finest Feline Foods</option>
                 </select>
                 <button id="login" class="enter-btn" type="submit">Enter Chat</button>
 
