emoji popup sticky to top when scrolling and overflow scroll top on messages container

--- a/client/chat.html
+++ b/client/chat.html
@@ -20,7 +20,8 @@
                 Leave
             </a>
         </header>
-        <div class="target">
+        <div class="target-container">
+
             <div id="emoji-popup-id" class="emoji-popup toggle-popup">
                 <div class="emoji" onclick="addEmoji(this.innerHTML)">🙀</div>
                 <div class="emoji" onclick="addEmoji(this.innerHTML)">😽</div>
@@ -33,6 +34,9 @@
                 <div class="emoji" onclick="addEmoji(this.innerHTML)">😹</div>
                 <div class="emoji" onclick="addEmoji(this.innerHTML)">🐱</div>
             </div>
+            <div class="target"></div>
+
+
         </div>
         <div class="input-container">
             <div class="chat-input-container">
