css update: changed mobile layout

--- a/client/chat.html
+++ b/client/chat.html
@@ -44,8 +44,8 @@
                 <button type="button" class="emo-btn" onclick="toggleEmojiPopup()">🐱</button>
             </div>
             <div class="buttons-container">
-                <button id="sendAllBtn">send to all</button>
-                <button id="sendMeBtn">send to me</button>
+                <button class="send-button" id="sendAllBtn">send to all</button>
+                <button class="send-button" id="sendMeBtn">send to me</button>
             </div>
         </div>
     </form>
